Added the logo and leftnavbar items, still with bugs

--- a/src/stylesheets/generalStyles.css
+++ b/src/stylesheets/generalStyles.css
@@ -4,6 +4,9 @@
     --FONT_MEDIUM_DARK: #465265;
     --FONT_STRONG_DARK: #161616;
 
+    --MAIN-COLOR-STRONG: #854efb;
+    --MAIN-COLOR-LIGHT: #f3eeff;
+
     --FONT_FAMILY_MAIN: 'DM Sans', sans-serif;
     --FONT_FAMILY_SECONDARY: 'Noto Sans Linear A', sans-serif;
 }
