--- a/src/App.css
+++ b/src/App.css
@@ -4,18 +4,45 @@
     box-sizing: border-box;
 }
 
+#root {
+    max-width: 100vw;
+    max-height: 100vh;
+}
+
 .App {
     display: flex;
-    width: 100vw;
-    height: 100vh;
+    max-width: 100vw;
+    max-height: 100vh;
 }
 
 .left-navbar-component {
     width: 20vw;
+    max-width: 20vw;
     height: 100vh;
+    max-height: 100vh;
     box-shadow: 2px 2px 42px 0px rgba(0, 0, 0, 0.04);
 }
 
-.navbar-component {
+.top-navbar-component {
+    height: 12vh;
+    max-height: 12vh;
     width: 80vw;
+    max-width: 80vw;
+}
+
+.dashboard-component {
+    background-color: var(--BG_COLOR);
+    display: flex;
+    font-family: var(--FONT_FAMILY_MAIN);
+    height: 88vh;
+    max-height: 88vh;
+    width: 80vw;
+    max-width: 80vw;
+}
+
+.navbar-and-content {
+    height: 100vh;
+    max-height: 100vh;
+    display: flex;
+    flex-flow: column;
 }
